# truerpc

./: CMakeLists.txt  Info.plist.in  README.md  icon.tiff
OLD/: AddProtoSourceController.swift  AddProtoSourceView.swift  CustomFileInputField.swift  MainView.swift  ProtoSource.swift  TempFile.swift  TrueRPCApp.swift
TrueRPC/: AddProtoSourceController.swift  AddProtoSourceView.swift  App.swift  ContentView.swift  CustomFileInputField.swift  Item.swift  MainView.swift  ProtoSource.swift  TempFile.swift  TrueRPCApp.swift
TrueRPC.xcodeproj/: project.pbxproj
TrueRPC.xcodeproj/project.xcworkspace/xcuserdata/truewebber.xcuserdatad/: UserInterfaceState.xcuserstate
TrueRPC.xcodeproj/xcshareddata/xcschemes/: TrueRPC.xcscheme
TrueRPC.xcodeproj/xcuserdata/truewebber.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
TrueRPC.xcodeproj/xcuserdata/truewebber.xcuserdatad/xcschemes/: xcschememanagement.plist
TrueRPC/Assets.xcassets/AppIcon.appiconset/: Contents.json
TrueRPC/Models/: CustomFile.swift  ProtoSource.swift
TrueRPC/Modules/FileManagement/: FileManagementModule.swift
TrueRPC/Modules/FileManagement/ViewModels/: FileListViewModel.swift  ProtoSourceListViewModel.swift
TrueRPC/Modules/FileManagement/Views/: FileContentView.swift  FileListView.swift  FileRowView.swift  ProtoSourceContentView.swift  ProtoSourceListView.swift  ProtoSourceRowView.swift
TrueRPC/Modules/ProtoSourceManagement/: ProtoSourceManagementModule.swift
TrueRPC/Modules/ProtoSourceManagement/ViewModels/: ProtoSourceListViewModel.swift
TrueRPC/Modules/ProtoSourceManagement/Views/: AddProtoSourceView.swift  FileSelectionView.swift  ProtoSourceContentView.swift  ProtoSourceListView.swift  ProtoSourceRowView.swift
TrueRPC/Services/: CustomFileManager.swift  FileError.swift  ProtoParseError.swift  ProtoSourceManager.swift
TrueRPCTests/: TrueRPCTests.swift
TrueRPCUITests/: TrueRPCUITests.swift  TrueRPCUITestsLaunchTests.swift
docker/linux-builder/: Dockerfile
include/: grpc_client.h  left_pane.h  main_window.h  mainwindow.h  proto_parser.h  quit.h  right_pane.h
src/: CMakeLists.txt  grpc_client.c  left_pane.c  main.c  main.cpp  main_window.c  main_window.cpp  mainwindow.cpp  mainwindow.ui  proto_parser.c  quit.c  right_pane.c
src/gui/: CMakeLists.txt  customdialog.cpp  customdialog.h  customdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/: main_window.ui
